feat: implement double-lock accounting periods and logical delete for journal entries
- Update AccountingPeriodRepository & Service to support Fiscal Year and Monthly locks.
- Refactor JournalEntryRepository to filter by 'active' status in balances and searches.
- Implement JournalEntry annulment logic with financial neutralization (zeroing amounts).
- Add compatibility bridge methods in repositories to support legacy service calls.
- Sync AccountingPeriodController with updated service method signatures.